--- a/app/cafe/templates/base.html
+++ b/app/cafe/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="ru">
 
@@ -9,6 +10,7 @@
         Base title
     {% endblock %}
     </title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
