Make order_list as table

--- a/app/cafe/templates/cafe/index.html
+++ b/app/cafe/templates/cafe/index.html
@@ -14,13 +14,9 @@
             </div>
         </div>
         <!-- Title -->
-
-        <img src="{% static 'images/home.webp' %}">
-
-        <div>
-            <br><br>
-            <a href="{% url 'cafe:order-create' %}" class="button-style">Создать заказ</a>
-        </div>
+        <section>
+            <img src="{% static 'images/home.webp' %}">
+        </section>
     </div>
 
 {% endblock %}
