--- a/app/cafe/templates/cafe/base.html
+++ b/app/cafe/templates/cafe/base.html
@@ -16,6 +16,9 @@
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">    
         <!-- Bootstrap core CSS -->
+        <!-- Fontawessome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+        <!-- Fontawessome -->
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
 
@@ -40,7 +43,7 @@
                             <a class="nav-link" href="{% url 'cafe:order-create' %}">Создать заказ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Редактировать заказ</a>
+                            <a class="nav-link" href="{% url 'cafe:order-find' %}">Найти заказ</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'cafe:order-list' %}">Список заказов</a>
