--- a/app/cafe/templates/cafe/order_find.html
+++ b/app/cafe/templates/cafe/order_find.html
@@ -7,12 +7,17 @@
 {% block content %}
     <div class="container">
         <section>
-            <h1>Поиск заказа</h1>
+            <div class="row">
+                <div class="col text-center">
+                    <h1>Поиск заказа</h1>
+                    <hr>
+                </div>
+            </div>
 
             <div class="row mt-3">
                 <div class="col">
-                    <hr>
                     <h4>Найти заказ по номеру стола</h4>
+                    <br>
                     <form action='' id="view_order_form">
                         <div class="form-group row">
                             <label for="order_table" class="col-sm-2 col-form-label col-form-label-lg">Номер стола:</label>
