--- a/app/cafe/templates/cafe/order_list.html
+++ b/app/cafe/templates/cafe/order_list.html
@@ -13,7 +13,7 @@
                     <hr>
                 </div>
             </div>
- 
+            <br>
             <div class="row">
                 <div class="col">
                     <table class="table table-striped">
@@ -44,7 +44,7 @@
                                 </td>
 
                                 <td>{{ order.get_status_display }}</td>
-                                <td>{{ order.created_at | date:"d F Y H:i:s" }}</td>
+                                <td>{{ order.created_at }}</td>
                                 <td>Какая-то цена</td>
                             </tr>
                             {% endfor %}
