--- a/app/cafe/templates/cafe/order_find.html
+++ b/app/cafe/templates/cafe/order_find.html
@@ -13,27 +13,15 @@
                     <hr>
                 </div>
             </div>
-
-            <div class="row mt-3">
-                <div class="col">
-                    <h4>Найти заказ по номеру стола</h4>
+            <br>
+            <div>
+                <form method="post">
+                    {% csrf_token %}
+                    {{ form.as_p }}
                     <br>
-                    <form action='' id="view_order_form" method="post">
-                        {% csrf_token %}
-                        <div class="form-group row">
-                            <label for="order_table" class="col-sm-2 col-form-label col-form-label-lg">Номер стола:</label>
-                            <div class="col-sm-8">
-                                <input type="number" class="form-control form-control-lg" id="order_table"
-                                    placeholder="введите номер стола">
-                            </div>
-                            <div class="col-sm-2">
-                                <input type="submit" class="form-control form-control-lg btn btn-info" value="Найти">
-                            </div>
-                        </div>
-                    </form>
-                </div>
+                    <input type="submit" class="btn btn-outline-info" value="Найти"/>
+                 </form>
             </div>
         </section>
     </div>
-
 {% endblock %}
