Make manage.py commands

--- a/app/cafe/templates/cafe/index.html
+++ b/app/cafe/templates/cafe/index.html
@@ -13,7 +13,9 @@
             </div>
         </div>
         <div align="right">
-            <i style="color: gray;">Мы выполнили уже {{ total_count }} заказов на {{ total_price.value }} рублей в сумме!</i>
+            <i style="color: gray;">
+                Мы выполнили уже {{ total_count }} заказов на {{ total_price.value }} рублей в сумме!
+            </i>
         </div>
         <section>
             <img src="{% static 'images/home.webp' %}">
