--- a/app/cafe/templates/cafe/order_edit.html
+++ b/app/cafe/templates/cafe/order_edit.html
@@ -30,7 +30,7 @@
                         </ul>
                         {{ form.as_p }}
                         <p>Дата создания: {{ order.created_at }}</p>
-                        <p>Стоимость: {{ price.value }}</p>
+                        <p>Стоимость: {{ order.total_price }}</p>
                     </li>
                 </ul>
                 <br>
