--- a/app/cafe/templates/cafe/order_list.html
+++ b/app/cafe/templates/cafe/order_list.html
@@ -42,11 +42,7 @@
                                     </td>
                                     <td>{{ order.get_status_display }}</td>
                                     <td>{{ order.created_at }}</td>
-                                    {% for price in prices %}
-                                        {% if price == order %}
-                                            <td>{{ price.total_price }}</td>
-                                        {% endif %}
-                                    {% endfor %}
+                                    <td>{{ order.total_price }}</td>
                                 </tr>
                             {% endfor %}
                         </tbody>
